Ass lifecycle scripts to develop, and the first test

--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "migrate": "./app.js"
   },
   "scripts": {
-    "test": "mocha test/unit --recursive"
+    "test": "mocha test/unit --recursive",
+    "debug-test": "mocha test/unit --recursive --debug-brk=5858",
+    "integration-test": "mocha test/integration --recursive -t 15000",
+    "debug-integration-test": "mocha test/integration --recursive --debug-brk=5858 -t 15000",
+    "coverage": "istanbul cover --include-all-sources true node_modules/mocha/bin/_mocha -- test/unit --recursive -t 15000",
+    "lint": "eslint .",
+    "nodemon": "nodemon --exec \"npm run lint && npm test && npm run coverage\""
   },
   "repository": {
     "type": "git",
